# Zero-A2A

./: README.md  main.py  pyproject.toml  test_weather_agent.py  test_weather_simple.py  test_zero_a2a.py
docs/: A2A-Production-Ready.md  Docker-Plan.md  a2a-tutorial.md
src/: __init__.py
src/agents/: __init__.py  base_agent.py  weather_agent.py
src/auth/: __init__.py  jwt_auth.py
src/core/: __init__.py  config.py  database.py  exceptions.py  models.py
src/middleware/: __init__.py  logging.py  metrics.py  security.py
src/server/: __init__.py  app.py
src/utils/: __init__.py  validators.py
src/zero_a2a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
